--- a/boldgrid-theme-framework/assets/scss/boldgrid/blog/design/_1.scss
+++ b/boldgrid-theme-framework/assets/scss/boldgrid/blog/design/_1.scss
@@ -1,10 +1,13 @@
 &.design-1 {
-	border-top-left-radius: 2em;
-	border-bottom-right-radius: 2em;
+	border-top-left-radius: 3rem;
+	border-bottom-right-radius: 3rem;
 	.entry-title,
 	.entry-meta {
 		padding-right: 0;
 		padding-left: 0;
+	}
+	.entry-title {
+		margin-right: 3rem;
 	}
 	.entry-header .entry-meta .posted-on {
 		background-color: rgba( 0,0,0,.75);
@@ -17,14 +20,14 @@
 		color: white;
 	}
 	.featured-imgage-header {
-		border-top-left-radius: 2em;
+		border-top-left-radius: 3rem;
 		height: 100%;
-		padding-left: 2em;
+		padding-left: 3rem;
 		padding-bottom: 0;
 	}
 	.entry-header,
 	&.has-post-thumbnail .featured-imgage-header {
-		border-top-left-radius: 2em;
+		border-top-left-radius: 3rem;
 	}
 	.entry-footer {
 		padding-bottom: 15px;
